mcp-server/src/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/



  const BUILTIN_OPS = new Set([
    'survey', 'ground', 'assert', 'doubt', 'contrast', 'analogy',
    'synthesize', 'reframe', 'assess', 'pivot', 'scope'
  ]);

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Script: peg$parseScript };
  var peg$startRuleFunction = peg$parseScript;

  var peg$c0 = "task:";
  var peg$c1 = "input:";
  var peg$c2 = ",";
  var peg$c3 = "=";
  var peg$c4 = "for";
  var peg$c5 = "in";
  var peg$c6 = "{";
  var peg$c7 = "}";
  var peg$c8 = "if";
  var peg$c9 = "else";
  var peg$c10 = "loop";
  var peg$c11 = "times";
  var peg$c12 = "until";
  var peg$c13 = "import";
  var peg$c14 = "define";
  var peg$c15 = "(";
  var peg$c16 = ")";
  var peg$c17 = "prompt";
  var peg$c18 = "input";
  var peg$c19 = "output";
  var peg$c20 = ":";
  var peg$c21 = "yield";
  var peg$c22 = "+";
  var peg$c23 = "|";
  var peg$c24 = ".";
  var peg$c25 = "survey";
  var peg$c26 = "ground";
  var peg$c27 = "assert";
  var peg$c28 = "doubt";
  var peg$c29 = "contrast";
  var peg$c30 = "analogy";
  var peg$c31 = "synthesize";
  var peg$c32 = "reframe";
  var peg$c33 = "assess";
  var peg$c34 = "pivot";
  var peg$c35 = "scope";
  var peg$c36 = "conclude";
  var peg$c37 = "==";
  var peg$c38 = "\"";
  var peg$c39 = "true";
  var peg$c40 = "false";
  var peg$c41 = "@last";
  var peg$c42 = "@";
  var peg$c43 = "[";
  var peg$c44 = "]";
  var peg$c45 = "narrow";
  var peg$c46 = "wide";
  var peg$c47 = "task";
  var peg$c48 = "null";
  var peg$c49 = "//";
  var peg$c50 = "\n";
  var peg$c51 = "/*";
  var peg$c52 = "*/";

  var peg$r0 = /^[a-zA-Z0-9_\/.:\-]/;
  var peg$r1 = /^[^"]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[a-zA-Z0-9_]/;
  var peg$r5 = /^[ \t\n\r]/;
  var peg$r6 = /^[^\n]/;

  var peg$e0 = peg$literalExpectation("task:", false);
  var peg$e1 = peg$literalExpectation("input:", false);
  var peg$e2 = peg$literalExpectation(",", false);
  var peg$e3 = peg$literalExpectation("=", false);
  var peg$e4 = peg$literalExpectation("for", false);
  var peg$e5 = peg$literalExpectation("in", false);
  var peg$e6 = peg$literalExpectation("{", false);
  var peg$e7 = peg$literalExpectation("}", false);
  var peg$e8 = peg$literalExpectation("if", false);
  var peg$e9 = peg$literalExpectation("else", false);
  var peg$e10 = peg$literalExpectation("loop", false);
  var peg$e11 = peg$literalExpectation("times", false);
  var peg$e12 = peg$literalExpectation("until", false);
  var peg$e13 = peg$literalExpectation("import", false);
  var peg$e14 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "/", ".", ":", "-"], false, false);
  var peg$e15 = peg$literalExpectation("define", false);
  var peg$e16 = peg$literalExpectation("(", false);
  var peg$e17 = peg$literalExpectation(")", false);
  var peg$e18 = peg$literalExpectation("prompt", false);
  var peg$e19 = peg$literalExpectation("input", false);
  var peg$e20 = peg$literalExpectation("output", false);
  var peg$e21 = peg$literalExpectation(":", false);
  var peg$e22 = peg$literalExpectation("yield", false);
  var peg$e23 = peg$literalExpectation("+", false);
  var peg$e24 = peg$literalExpectation("|", false);
  var peg$e25 = peg$literalExpectation(".", false);
  var peg$e26 = peg$literalExpectation("survey", false);
  var peg$e27 = peg$literalExpectation("ground", false);
  var peg$e28 = peg$literalExpectation("assert", false);
  var peg$e29 = peg$literalExpectation("doubt", false);
  var peg$e30 = peg$literalExpectation("contrast", false);
  var peg$e31 = peg$literalExpectation("analogy", false);
  var peg$e32 = peg$literalExpectation("synthesize", false);
  var peg$e33 = peg$literalExpectation("reframe", false);
  var peg$e34 = peg$literalExpectation("assess", false);
  var peg$e35 = peg$literalExpectation("pivot", false);
  var peg$e36 = peg$literalExpectation("scope", false);
  var peg$e37 = peg$literalExpectation("conclude", false);
  var peg$e38 = peg$literalExpectation("==", false);
  var peg$e39 = peg$literalExpectation("\"", false);
  var peg$e40 = peg$classExpectation(["\""], true, false);
  var peg$e41 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e42 = peg$literalExpectation("true", false);
  var peg$e43 = peg$literalExpectation("false", false);
  var peg$e44 = peg$literalExpectation("@last", false);
  var peg$e45 = peg$literalExpectation("@", false);
  var peg$e46 = peg$literalExpectation("[", false);
  var peg$e47 = peg$literalExpectation("]", false);
  var peg$e48 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e49 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e50 = peg$literalExpectation("narrow", false);
  var peg$e51 = peg$literalExpectation("wide", false);
  var peg$e52 = peg$literalExpectation("task", false);
  var peg$e53 = peg$literalExpectation("null", false);
  var peg$e54 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e55 = peg$literalExpectation("//", false);
  var peg$e56 = peg$classExpectation(["\n"], true, false);
  var peg$e57 = peg$literalExpectation("\n", false);
  var peg$e58 = peg$anyExpectation();
  var peg$e59 = peg$literalExpectation("/*", false);
  var peg$e60 = peg$literalExpectation("*/", false);

  var peg$f0 = function(task, inputs, body) {
      return { type: 'Script', task, inputs: inputs || [], body, location: location() };
    };
  var peg$f1 = function(value) { return value.value; };
  var peg$f2 = function(first, p) { return p; };
  var peg$f3 = function(first, rest) {
      return [first, ...rest];
    };
  var peg$f4 = function(name, val) {
      return { type: 'InputDecl', name, defaultValue: val, location: location() };
    };
  var peg$f5 = function(name) {
      return { type: 'InputDecl', name, location: location() };
    };
  var peg$f6 = function(stmts) { return stmts.map(s => s[0]); };
  var peg$f7 = function(name, value) {
      return { type: 'Assignment', name, value, location: location() };
    };
  var peg$f8 = function(name, stmt) {
      return { type: 'Assignment', name, value: stmt, location: location() };
    };
  var peg$f9 = function(name, expr) {
      return { type: 'Assignment', name, value: expr, location: location() };
    };
  var peg$f10 = function(stmt) { return stmt; };
  var peg$f11 = function(variable, iterable, body) {
      return { type: 'ForStatement', variable, iterable, body, location: location() };
    };
  var peg$f12 = function(condition, consequent, body) { return body; };
  var peg$f13 = function(condition, consequent, alt) {
      return { type: 'IfStatement', condition, consequent, alternate: alt || [], location: location() };
    };
  var peg$f14 = function(count, body) {
      return { type: 'LoopTimesStatement', count, body, location: location() };
    };
  var peg$f15 = function(condition, body) {
      return { type: 'LoopUntilStatement', condition, body, location: location() };
    };
  var peg$f16 = function(path) {
      return { type: 'ImportStatement', path, location: location() };
    };
  var peg$f17 = function(chars) { return chars; };
  var peg$f18 = function(name, params, members, body) {
      const prompt = members.find(m => m.key === 'prompt')?.value || '';
      const inputField = members.find(m => m.key === 'input')?.value;
      const outputField = members.find(m => m.key === 'output')?.value;
      return {
        type: 'DefineStatement', name, params: params || [],
        prompt, inputField, outputField, body,
        location: location()
      };
    };
  var peg$f19 = function(key, value) {
      return { key, value };
    };
  var peg$f20 = function(first, p) { return p; };
  var peg$f21 = function(first, rest) {
      return [first, ...rest];
    };
  var peg$f22 = function(name, def) { return { name, defaultValue: def }; };
  var peg$f23 = function(name) { return { name }; };
  var peg$f24 = function(value) {
      return { type: 'YieldStatement', value, location: location() };
    };
  var peg$f25 = function(expr) {
      return { type: 'ExpressionStatement', expression: expr, location: location() };
    };
  var peg$f26 = function(head, right) { return right; };
  var peg$f27 = function(head, tail) {
      return { type: 'ConcatExpression', parts: [head, ...tail], location: location() };
    };
  var peg$f28 = function(head, rest, v) { return v; };
  var peg$f29 = function(head, rest, tail) {
      function getName(e) {
        if (e.type === 'Identifier') return e.name;
        if (e.type === 'BareWord') return e.name;
        return String(e.value ?? e.name ?? '?');
      }
      return { type: 'EnumLiteral', values: [getName(head), getName(rest), ...tail.map(getName)], location: location() };
    };
  var peg$f30 = function(head, prop) { return prop; };
  var peg$f31 = function(head, tail) {
      return tail.reduce((obj, prop) => ({
        type: 'DotAccess', object: obj, property: prop, location: location()
      }), head);
    };
  var peg$f32 = function(op, args) {
      return { type: 'OperationCall', operation: op, args: args || [], location: location() };
    };
  var peg$f33 = function(name) { return !BUILTIN_OPS.has(name); };
  var peg$f34 = function(name, args) {
      return { type: 'FunctionCall', name, args: args || [], location: location() };
    };
  var peg$f35 = function(name) {
      return name;
    };
  var peg$f36 = function(first, a) { return a; };
  var peg$f37 = function(first, rest) {
      return [first, ...rest];
    };
  var peg$f38 = function(name, value) {
      return { type: 'Argument', name, value };
    };
  var peg$f39 = function(value) {
      return { type: 'Argument', value };
    };
  var peg$f40 = function(fields) {
      return { type: 'ConcludeExpression', fields, location: location() };
    };
  var peg$f41 = function(fields) { return fields.map(f => f[0]); };
  var peg$f42 = function(name, value) {
      return { name, value, location: location() };
    };
  var peg$f43 = function(left, right) {
      return { type: 'BinaryExpression', operator: '==', left, right, location: location() };
    };
  var peg$f44 = function(chars) {
      return { type: 'StringLiteral', value: chars, location: location() };
    };
  var peg$f45 = function(value) {
      return { type: 'NumberLiteral', value, location: location() };
    };
  var peg$f46 = function(digits) { return parseInt(digits, 10); };
  var peg$f47 = function() { return { type: 'BooleanLiteral', value: true, location: location() }; };
  var peg$f48 = function() { return { type: 'BooleanLiteral', value: false, location: location() }; };
  var peg$f49 = function() { return { type: 'AtReference', ref: 'last', location: location() }; };
  var peg$f50 = function(n) { return { type: 'AtReference', ref: String(n), location: location() }; };
  var peg$f51 = function(elements) {
      return { type: 'ArrayLiteral', elements: elements || [], location: location() };
    };
  var peg$f52 = function(first, e) { return e; };
  var peg$f53 = function(first, rest) {
      return [first, ...rest];
    };
  var peg$f54 = function(key, value) {
      return { type: 'KeyValuePair', key, value, location: location() };
    };
  var peg$f55 = function(props) {
      return { type: 'ObjectLiteral', properties: props || [], location: location() };
    };
  var peg$f56 = function(first, p) { return p; };
  var peg$f57 = function(first, rest) {
      return [first, ...rest];
    };
  var peg$f58 = function(key, value) { return { key, value }; };
  var peg$f59 = function(key) { return { key }; };
  var peg$f60 = function(name) {
      return { type: 'Identifier', name, location: location() };
    };
  var peg$f61 = function(name) { return name; };
  var peg$f62 = function(name) { return name; };
  var peg$f63 = function(name) { return name; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseScript() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseTaskDecl();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseInputDecl();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse_();
      s6 = peg$parseStatementList();
      s7 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2, s4, s6);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTaskDecl() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseStringLiteral();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInputDecl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseInputParam();
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$currPos;
        s6 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 44) {
          s7 = peg$c2;
          peg$currPos++;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s7 !== peg$FAILED) {
          s8 = peg$parse_();
          s9 = peg$parseInputParam();
          if (s9 !== peg$FAILED) {
            peg$savedPos = s5;
            s5 = peg$f2(s3, s9);
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$currPos;
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 44) {
            s7 = peg$c2;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseInputParam();
            if (s9 !== peg$FAILED) {
              peg$savedPos = s5;
              s5 = peg$f2(s3, s9);
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        }
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f3(s3, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInputParam() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseIdent();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 61) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseExpression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseIdent();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f5(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseStatementList() {
    var s0, s1, s2, s3, s4;
